err/zetalibrary.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/PyYAML-3.12.egg-info'...
Listing './lib/python3.5/site-packages/argh'...
Listing './lib/python3.5/site-packages/argh-0.26.2.dist-info'...
Listing './lib/python3.5/site-packages/cssmin-0.2.0.egg-info'...
Listing './lib/python3.5/site-packages/jsmin'...
Listing './lib/python3.5/site-packages/jsmin-2.2.2.egg-info'...
Listing './lib/python3.5/site-packages/pathtools'...
Listing './lib/python3.5/site-packages/pathtools-0.1.2.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/tests'...
Listing './lib/python3.5/site-packages/watchdog'...
Listing './lib/python3.5/site-packages/watchdog/observers'...
Listing './lib/python3.5/site-packages/watchdog/tricks'...
Listing './lib/python3.5/site-packages/watchdog/utils'...
Listing './lib/python3.5/site-packages/watchdog-0.8.3.egg-info'...
Listing './lib/python3.5/site-packages/yaml'...
Listing './lib/python3.5/site-packages/zetalibrary'...
Listing './lib/python3.5/site-packages/zetalibrary/libs'...
Listing './lib/python3.5/site-packages/zetalibrary/libs/.git'...
Listing './lib/python3.5/site-packages/zetalibrary/libs/.git/hooks'...
Listing './lib/python3.5/site-packages/zetalibrary/libs/.git/info'...
Listing './lib/python3.5/site-packages/zetalibrary/libs/.git/logs'...
Listing './lib/python3.5/site-packages/zetalibrary/libs/.git/logs/refs'...
Listing './lib/python3.5/site-packages/zetalibrary/libs/.git/logs/refs/heads'...
Listing './lib/python3.5/site-packages/zetalibrary/libs/.git/logs/refs/remotes'...
Listing './lib/python3.5/site-packages/zetalibrary/libs/.git/logs/refs/remotes/origin'...
Listing './lib/python3.5/site-packages/zetalibrary/libs/.git/objects'...
Listing './lib/python3.5/site-packages/zetalibrary/libs/.git/objects/03'...
Listing './lib/python3.5/site-packages/zetalibrary/libs/.git/objects/22'...
Listing './lib/python3.5/site-packages/zetalibrary/libs/.git/objects/2c'...
Listing './lib/python3.5/site-packages/zetalibrary/libs/.git/objects/3a'...
Listing './lib/python3.5/site-packages/zetalibrary/libs/.git/objects/5e'...
Listing './lib/python3.5/site-packages/zetalibrary/libs/.git/objects/83'...
Listing './lib/python3.5/site-packages/zetalibrary/libs/.git/objects/97'...
Listing './lib/python3.5/site-packages/zetalibrary/libs/.git/objects/a2'...
Listing './lib/python3.5/site-packages/zetalibrary/libs/.git/objects/b9'...
Listing './lib/python3.5/site-packages/zetalibrary/libs/.git/objects/ce'...
Listing './lib/python3.5/site-packages/zetalibrary/libs/.git/objects/d6'...
Listing './lib/python3.5/site-packages/zetalibrary/libs/.git/objects/e6'...
Listing './lib/python3.5/site-packages/zetalibrary/libs/.git/objects/pack'...
Listing './lib/python3.5/site-packages/zetalibrary/libs/.git/refs'...
Listing './lib/python3.5/site-packages/zetalibrary/libs/.git/refs/heads'...
Listing './lib/python3.5/site-packages/zetalibrary/libs/.git/refs/remotes'...
Listing './lib/python3.5/site-packages/zetalibrary/libs/.git/refs/remotes/origin'...
Listing './lib/python3.5/site-packages/zetalibrary/libs/blueprint'...
Listing './lib/python3.5/site-packages/zetalibrary/libs/compass'...
Listing './lib/python3.5/site-packages/zetalibrary/libs/compass/css3'...
Listing './lib/python3.5/site-packages/zetalibrary/libs/compass/layout'...
Listing './lib/python3.5/site-packages/zetalibrary/libs/compass/reset'...
Listing './lib/python3.5/site-packages/zetalibrary/libs/compass/typography'...
Listing './lib/python3.5/site-packages/zetalibrary/libs/compass/typography/links'...
Listing './lib/python3.5/site-packages/zetalibrary/libs/compass/typography/lists'...
Listing './lib/python3.5/site-packages/zetalibrary/libs/compass/typography/text'...
Listing './lib/python3.5/site-packages/zetalibrary/libs/compass/utilities'...
Listing './lib/python3.5/site-packages/zetalibrary/libs/compass/utilities/color'...
Listing './lib/python3.5/site-packages/zetalibrary/libs/compass/utilities/general'...
Listing './lib/python3.5/site-packages/zetalibrary/libs/compass/utilities/links'...
Listing './lib/python3.5/site-packages/zetalibrary/libs/compass/utilities/lists'...
Listing './lib/python3.5/site-packages/zetalibrary/libs/compass/utilities/sprites'...
Listing './lib/python3.5/site-packages/zetalibrary/libs/compass/utilities/tables'...
Listing './lib/python3.5/site-packages/zetalibrary/libs/compass/utilities/text'...
Listing './lib/python3.5/site-packages/zetalibrary/libs/zeta'...
Listing './lib/python3.5/site-packages/zetalibrary/libs/zeta/z-base'...
Listing './lib/python3.5/site-packages/zetalibrary/libs/zeta/z-grid'...
Listing './lib/python3.5/site-packages/zetalibrary/libs/zeta/z-placeholder'...
Listing './lib/python3.5/site-packages/zetalibrary/libs/zeta/z-print'...
Listing './lib/python3.5/site-packages/zetalibrary/libs/zeta/z-reset'...
Listing './lib/python3.5/site-packages/zetalibrary/libs/zeta/z-typography'...
Compiling './lib/python3.5/site-packages/zetalibrary/main.py'...
***   File "./lib/python3.5/site-packages/zetalibrary/main.py", line 16
    print "# Zeta integration "
                              ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/zetalibrary/packer.py'...
***   File "./lib/python3.5/site-packages/zetalibrary/packer.py", line 38
    except IOError, ex:
                  ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/zetalibrary/scss'...
Compiling './lib/python3.5/site-packages/zetalibrary/scss/__init__.py'...
***   File "./lib/python3.5/site-packages/zetalibrary/scss/__init__.py", line 6231
    print BUILD_INFO
                   ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/zetalibrary/utils.py'...
***   File "./lib/python3.5/site-packages/zetalibrary/utils.py", line 77
    print "\nChanges found: %s" % event.src_path
                              ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/zetalibrary-0.5.93.egg-info'...
Listing './share'...
Listing './share/python-wheels'...
